--- a/tdc.html
+++ b/tdc.html
@@ -1027,10 +1027,10 @@
                     </div>
                     <div class="row" style="height: 75px; padding: 0px 16px">
                       <div class="col-xs-6" style="height: 100%; padding: 0px">
-                        <div id="QV-59" class="qvobject" style="width: 100%; height: 100%"></div>
+                        <div id="QV-59" class="qvplaceholder" style="width: 100%; height: 100%"></div>
                       </div>
                       <div class="col-xs-6" style="height: 100%; padding-top: 10px">
-                        <div id="QV-60" class="qvobject" style="width: 100%; height: 100%"></div>
+                        <div id="QV-60" class="qvplaceholder" style="width: 100%; height: 100%"></div>
                       </div>
                     </div>
                   </div>
@@ -1042,10 +1042,10 @@
                     </div>
                     <div class="row" style="height: 75px; padding: 0px 16px">
                       <div class="col-xs-6" style="height: 100%; padding: 0px">
-                        <div id="QV-61" class="qvobject" style="width: 100%; height: 100%"></div>
+                        <div id="QV-61" class="qvplaceholder" style="width: 100%; height: 100%"></div>
                       </div>
                       <div class="col-xs-6" style="height: 100%; padding-top: 10px">
-                        <div id="QV-62" class="qvobject" style="width: 100%; height: 100%"></div>
+                        <div id="QV-62" class="qvplaceholder" style="width: 100%; height: 100%"></div>
                       </div>
                     </div>
                   </div>
@@ -1057,10 +1057,10 @@
                     </div>
                     <div class="row" style="height: 75px; padding: 0px 16px">
                       <div class="col-xs-6" style="height: 100%; padding: 0px">
-                        <div id="QV-63" class="qvobject" style="height: 100%"></div>
+                        <div id="QV-63" class="qvplaceholder" style="height: 100%"></div>
                       </div>
                       <div class="col-xs-6" style="height: 100%; padding-top: 10px">
-                        <div id="QV-64" class="qvobject" style="height: 100%"></div>
+                        <div id="QV-64" class="qvplaceholder" style="height: 100%"></div>
                       </div>
                     </div>
                   </div>
@@ -1101,7 +1101,7 @@
                               bottom: 36px !important;
                             ">
                             <div class="row" style="padding:0px 16px;">
-                              <div id="QV-65" class="qvobject" style="height: 395px"></div>
+                              <div id="QV-65" class="qvplaceholder" style="height: 395px"></div>
                             </div>
                             <div class="row" style="height: 50px;padding: 0px 16px;display: flex;justify-content: center;align-items: center;">
                               <div class="my-legend" style="padding: 12px">
@@ -1159,7 +1159,7 @@
                     <div class="col-xs-12 col-sm-4">
                       <div class="row" style="height: 40px; padding: 10px;">
                         <div class="col-xs-12">
-                          <div class="qvobject" id="QV-67" style="height: 40px">placeholder for title</div>
+                          <div class="qvplaceholder" id="QV-67" style="height: 40px">placeholder for title</div>
                         </div>
                       </div>
                       <div class="row" style="height: 200px">
@@ -1167,7 +1167,7 @@
                           Satisfaction
                         </div>
                         <div class="col-xs-12 item" style="padding: 12px 12px 0px">
-                          <div class="qvobject" id="QV-68" style="height: 190px"></div>
+                          <div class="qvplaceholder" id="QV-68" style="height: 190px"></div>
                         </div>
                       </div>
                       <div class="row" style="height: 75px">
@@ -1278,10 +1278,10 @@
                     </div>
                     <div class="row" style="height: 75px; padding: 0px 16px">
                       <div class="col-xs-6" style="height: 100%; padding: 0px">
-                        <div id="QV-79" class="qvobject" style="width: 100%; height: 100%"></div>
+                        <div id="QV-79" class="qvplaceholder" style="width: 100%; height: 100%"></div>
                       </div>
                       <div class="col-xs-6" style="height: 100%; padding-top: 10px">
-                        <div id="QV-80" class="qvobject" style="width: 100%; height: 100%"></div>
+                        <div id="QV-80" class="qvplaceholder" style="width: 100%; height: 100%"></div>
                       </div>
                     </div>
                   </div>
@@ -1293,10 +1293,10 @@
                     </div>
                     <div class="row" style="height: 75px; padding: 0px 16px">
                       <div class="col-xs-6" style="height: 100%; padding: 0px">
-                        <div id="QV-81" class="qvobject" style="width: 100%; height: 100%"></div>
+                        <div id="QV-81" class="qvplaceholder" style="width: 100%; height: 100%"></div>
                       </div>
                       <div class="col-xs-6" style="height: 100%; padding-top: 10px">
-                        <div id="QV-82" class="qvobject" style="width: 100%; height: 100%"></div>
+                        <div id="QV-82" class="qvplaceholder" style="width: 100%; height: 100%"></div>
                       </div>
                     </div>
                   </div>
@@ -1308,10 +1308,10 @@
                     </div>
                     <div class="row" style="height: 75px; padding: 0px 16px">
                       <div class="col-xs-6" style="height: 100%; padding: 0px">
-                        <div id="QV-83" class="qvobject" style="height: 100%"></div>
+                        <div id="QV-83" class="qvplaceholder" style="height: 100%"></div>
                       </div>
                       <div class="col-xs-6" style="height: 100%; padding-top: 10px">
-                        <div id="QV-84" class="qvobject" style="height: 100%"></div>
+                        <div id="QV-84" class="qvplaceholder" style="height: 100%"></div>
                       </div>
                     </div>
                   </div>
@@ -1336,7 +1336,7 @@
                               bottom: 36px !important;
                             ">
                             <div class="row" style="padding:0px 16px;">
-                              <div id="QV-85" class="qvobject" style="height: 395px"></div>
+                              <div id="QV-85" class="qvplaceholder" style="height: 395px"></div>
                             </div>
                             <div class="row" style="height: 50px;padding: 0px 16px;display: flex;justify-content: center;align-items: center;">
                               <div class="my-legend" style="padding: 12px">
@@ -1366,12 +1366,12 @@
                     <div class="col-xs-12 col-sm-4">
                       <div class="row" style="height: 40px; padding: 10px;">
                         <div class="col-xs-12">
-                          <div class="qvobject" id="QV-86" style="height: 40px">placeholder for title</div>
+                          <div class="qvplaceholder" id="QV-86" style="height: 40px">placeholder for title</div>
                         </div>
                       </div>
                       <div class="row" style="height: 400px">
                         <div class="col-xs-12 item" style="padding: 12px 12px 0px">
-                          <div class="qvobject" id="QV-87" style="height: 190px"></div>
+                          <div class="qvplaceholder" id="QV-87" style="height: 190px"></div>
                         </div>
                       </div>
                     </div>
@@ -1406,10 +1406,10 @@
                     </div>
                     <div class="row" style="height: 75px; padding: 0px 16px">
                       <div class="col-xs-6" style="height: 100%; padding: 0px">
-                        <div id="QV-92" class="qvobject" style="width: 100%; height: 100%"></div>
+                        <div id="QV-92" class="qvplaceholder" style="width: 100%; height: 100%"></div>
                       </div>
                       <div class="col-xs-6" style="height: 100%; padding-top: 10px">
-                        <div id="QV-93" class="qvobject" style="width: 100%; height: 100%"></div>
+                        <div id="QV-93" class="qvplaceholder" style="width: 100%; height: 100%"></div>
                       </div>
                     </div>
                   </div>
@@ -1421,7 +1421,7 @@
                     </div>
                     <div class="row" style="height: 75px; padding: 0px 16px">
                       <div class="col-xs-6" style="height: 100%; padding: 0px">
-                        <div id="QV-94" class="qvobject" style="width: 100%; height: 100%"></div>
+                        <div id="QV-94" class="qvplaceholder" style="width: 100%; height: 100%"></div>
                       </div>
                       <div class="col-xs-6" style="height: 100%; padding-top: 10px">
                         <div id="QV-95" class="qvobject" style="width: 100%; height: 100%"></div>
@@ -1436,10 +1436,10 @@
                     </div>
                     <div class="row" style="height: 75px; padding: 0px 16px">
                       <div class="col-xs-6" style="height: 100%; padding: 0px">
-                        <div id="QV-96" class="qvobject" style="height: 100%"></div>
+                        <div id="QV-96" class="qvplaceholder" style="height: 100%"></div>
                       </div>
                       <div class="col-xs-6" style="height: 100%; padding-top: 10px">
-                        <div id="QV-97" class="qvobject" style="height: 100%"></div>
+                        <div id="QV-97" class="qvplaceholder" style="height: 100%"></div>
                       </div>
                     </div>
                   </div>
@@ -1464,7 +1464,7 @@
                               bottom: 36px !important;
                             ">
                             <div class="row" style="padding:0px 16px;">
-                              <div id="QV-98" class="qvobject" style="height: 395px"></div>
+                              <div id="QV-98" class="qvplaceholder" style="height: 395px"></div>
                             </div>
                             <div class="row" style="height: 50px;padding: 0px 16px;display: flex;justify-content: center;align-items: center;">
                               <div class="my-legend" style="padding: 12px">
@@ -1494,12 +1494,12 @@
                     <div class="col-xs-12 col-sm-4">
                       <div class="row" style="height: 40px; padding: 10px;">
                         <div class="col-xs-12">
-                          <div class="qvobject" id="QV-99" style="height: 40px">placeholder for title</div>
+                          <div class="qvplaceholder" id="QV-99" style="height: 40px">placeholder for title</div>
                         </div>
                       </div>
                       <div class="row" style="height: 400px">
                         <div class="col-xs-12 item" style="padding: 12px 12px 0px">
-                          <div class="qvobject" id="QV-100" style="height: 190px"></div>
+                          <div class="qvplaceholder" id="QV-100" style="height: 190px"></div>
                         </div>
                       </div>
                     </div>
@@ -1534,10 +1534,10 @@
                     </div>
                     <div class="row" style="height: 75px; padding: 0px 16px">
                       <div class="col-xs-6" style="height: 100%; padding: 0px">
-                        <div id="QV-106" class="qvobject" style="width: 100%; height: 100%"></div>
+                        <div id="QV-106" class="qvplaceholder" style="width: 100%; height: 100%"></div>
                       </div>
                       <div class="col-xs-6" style="height: 100%; padding-top: 10px">
-                        <div id="QV-107" class="qvobject" style="width: 100%; height: 100%"></div>
+                        <div id="QV-107" class="qvplaceholder" style="width: 100%; height: 100%"></div>
                       </div>
                     </div>
                   </div>
@@ -1549,10 +1549,10 @@
                     </div>
                     <div class="row" style="height: 75px; padding: 0px 16px">
                       <div class="col-xs-6" style="height: 100%; padding: 0px">
-                        <div id="QV-108" class="qvobject" style="width: 100%; height: 100%"></div>
+                        <div id="QV-108" class="qvplaceholder" style="width: 100%; height: 100%"></div>
                       </div>
                       <div class="col-xs-6" style="height: 100%; padding-top: 10px">
-                        <div id="QV-109" class="qvobject" style="width: 100%; height: 100%"></div>
+                        <div id="QV-109" class="qvplaceholder" style="width: 100%; height: 100%"></div>
                       </div>
                     </div>
                   </div>
@@ -1564,10 +1564,10 @@
                     </div>
                     <div class="row" style="height: 75px; padding: 0px 16px">
                       <div class="col-xs-6" style="height: 100%; padding: 0px">
-                        <div id="QV-110" class="qvobject" style="height: 100%"></div>
+                        <div id="QV-110" class="qvplaceholder" style="height: 100%"></div>
                       </div>
                       <div class="col-xs-6" style="height: 100%; padding-top: 10px">
-                        <div id="QV-111" class="qvobject" style="height: 100%"></div>
+                        <div id="QV-111" class="qvplaceholder" style="height: 100%"></div>
                       </div>
                     </div>
                   </div>
@@ -1592,7 +1592,7 @@
                               bottom: 36px !important;
                             ">
                             <div class="row" style="padding:0px 16px;">
-                              <div id="QV-112" class="qvobject" style="height: 395px"></div>
+                              <div id="QV-112" class="qvplaceholder" style="height: 395px"></div>
                             </div>
                             <div class="row" style="height: 50px;padding: 0px 16px;display: flex;justify-content: center;align-items: center;">
                               <div class="my-legend" style="padding: 12px">
@@ -1622,7 +1622,7 @@
                     <div class="col-xs-12 col-sm-4">
                       <div class="row" style="height: 40px; padding: 10px;">
                         <div class="col-xs-12">
-                          <div class="qvobject" id="QV-113" style="height: 40px">placeholder for title</div>
+                          <div class="qvplaceholder" id="QV-113" style="height: 40px">placeholder for title</div>
                         </div>
                       </div>
                       <div class="row" style="height: 400px">
@@ -1630,7 +1630,7 @@
                           Readiness by Site
                         </div>
                         <div class="col-xs-12 item" style="padding: 12px 12px 0px">
-                          <div class="qvobject" id="QV-114" style="height: 190px"></div>
+                          <div class="qvplaceholder" id="QV-114" style="height: 190px"></div>
                         </div>
                       </div>
                     </div>
