visitor hubs fix

--- a/tdc.html
+++ b/tdc.html
@@ -824,7 +824,7 @@
                         <div id="QV35" class="qvobject" style="height: 100%"></div>
                       </div>
                       <div class="col-xs-6" style="height: 100%; padding-top: 10px">
-                        <div id="QV36" class="qvobject" style="height: 100%"></div>
+                        <div id="QV36" class="qvplaceholder" style="height: 100%"></div>
                       </div>
                     </div>
                   </div>
@@ -1424,7 +1424,7 @@
                         <div id="QV-94" class="qvplaceholder" style="width: 100%; height: 100%"></div>
                       </div>
                       <div class="col-xs-6" style="height: 100%; padding-top: 10px">
-                        <div id="QV-95" class="qvobject" style="width: 100%; height: 100%"></div>
+                        <div id="QV-95" class="qvplaceholder" style="width: 100%; height: 100%"></div>
                       </div>
                     </div>
                   </div>
@@ -1459,29 +1459,36 @@
                       <div class="row" style="height: 430px">
                         <div class="col-xs-12" style="height: 100%; padding: 0px">     
                           <div style="
-                              height: 445px;
+                              height: 430px;
                               position: relative;
-                              bottom: 36px !important;
                             ">
                             <div class="row" style="padding:0px 16px;">
-                              <div id="QV-98" class="qvplaceholder" style="height: 395px"></div>
+                              <div id="QV-98" class="qvobject" style="height: 380px"></div>
                             </div>
                             <div class="row" style="height: 50px;padding: 0px 16px;display: flex;justify-content: center;align-items: center;">
                               <div class="my-legend" style="padding: 12px">
                                 <div class="legend-scale">
-                                  <ul class="legend-labels">
+                                  <ul class="legend-labels-circle">
                                     <li>
                                       <span style="background: #da8177"></span>
-                                      <span class="LegendTitle" style="width: 62px !important;">Low (0 - 60%)</span>
+                                      <span class="LegendTitle" style="width: 100px !important;">Low (0 - 60%)</span>
                                     </li>
                                     <li>
                                       <span style="background: #f8c143"></span>
-                                      <span class="LegendTitle" style="width: 62px !important;">Mid (60-80%)</span>
+                                      <span class="LegendTitle" style="width: 100px !important;">Mid (60-80%)</span>
                                     </li>
                                     <li>
                                       <span style="background: #9fcd63"></span>
-                                      <span class="LegendTitle" style="width: 62px !important;">High (&gt;80%)</span>
+                                      <span class="LegendTitle" style="width: 100px !important;">High (&gt;80%)</span>
                                     </li>
+                                    <div class="row" style="
+                                    padding-left: 14px;
+                                ">
+                                      <li>
+                                        <span style="background: #FFFFFF"></span>
+                                        <span class="LegendTitle" style="width: 232px !important;">Size of the bubble is proportional to the number of visitors</span> 
+                                      </li>
+                                    </div>
                                   </ul>
                                 </div>
                               </div>
@@ -1497,9 +1504,9 @@
                           <div class="qvplaceholder" id="QV-99" style="height: 40px">placeholder for title</div>
                         </div>
                       </div>
-                      <div class="row" style="height: 400px">
-                        <div class="col-xs-12 item" style="padding: 12px 12px 0px">
-                          <div class="qvplaceholder" id="QV-100" style="height: 190px"></div>
+                      <div class="row" style="height: 430px">
+                        <div class="col-xs-12 item" style="padding: 0px 12px">
+                          <div class="qvobject" id="QV-100" style="height: 315px"></div>
                         </div>
                       </div>
                     </div>
