--- a/tdc.html
+++ b/tdc.html
@@ -1101,12 +1101,12 @@
                               bottom: 36px !important;
                             ">
                             <div class="row" style="padding:0px 16px;">
-                              <div id="QV-65" class="qvplaceholder" style="height: 395px"></div>
+                              <div id="QV-65" class="qvobject" style="height: 395px"></div>
                             </div>
                             <div class="row" style="height: 50px;padding: 0px 16px;display: flex;justify-content: center;align-items: center;">
                               <div class="my-legend" style="padding: 12px">
                                 <div class="legend-scale">
-                                  <ul class="legend-labels">
+                                  <ul class="legend-labels-circle">
                                     <li>
                                       <span style="background: #da8177"></span>
                                       <span class="LegendTitle" style="width: 62px !important;">Low (0 - 60%)</span>
@@ -1119,6 +1119,14 @@
                                       <span style="background: #9fcd63"></span>
                                       <span class="LegendTitle" style="width: 62px !important;">High (&gt;80%)</span>
                                     </li>
+                                    <div class="row" style="
+                                    padding-left: 14px;
+                                ">
+                                      <li>
+                                        <span style="background: #FFFFFF"></span>
+                                        <span class="LegendTitle" style="width: 232px !important;">Size of the bubble is proportional to the number of visitors</span> 
+                                      </li>
+                                    </div>
                                   </ul>
                                 </div>
                               </div>
@@ -1130,7 +1138,7 @@
                               bottom: 36px !important;
                             ">
                             <div class="row" style="padding:0px 16px;">
-                              <div id="QV-66" class="qvplaceholder" style="height: 395px"></div>
+                              <div id="QV-66" class="qvobject" style="height: 395px"></div>
                             </div>
                             <div class="row" style="height: 50px;padding: 0px 16px;display: flex;justify-content: center;align-items: center;">
                               <div class="my-legend" style="padding: 12px">
@@ -1148,6 +1156,7 @@
                                       <span style="background: #9fcd63"></span>
                                       <span class="LegendTitle" style="width: 62px !important;">High (&gt;2%)</span>
                                     </li>
+                                    
                                   </ul>
                                 </div>
                               </div>
@@ -1176,7 +1185,7 @@
                         </div>
                         <div class="col-xs-4 item" style="padding: 12px">
                           <div class="row">
-                            <div class="qvplaceholder" id="QV-69" style="height: 35px"></div>
+                            <div class="qvobject" id="QV-69" style="height: 38px"></div>
                           </div>
                           <div class="row sub-title-3" style="height: 20px">
                             Inbound Flight Delay
@@ -1184,7 +1193,7 @@
                         </div>
                         <div class="col-xs-4 item" style="padding: 12px">
                           <div class="row">
-                            <div class="qvplaceholder" id="QV-70" style="height: 35px"></div>
+                            <div class="qvplaceholder" id="QV-70" style="height: 38px"></div>
 
                           </div>
                           <div class="row sub-title-3" style="height: 20px">
@@ -1193,7 +1202,7 @@
                         </div>
                         <div class="col-xs-4 item" style="padding: 12px">
                           <div class="row">
-                            <div class="qvplaceholder" id="QV-71" style="height: 35px"></div>
+                            <div class="qvplaceholder" id="QV-71" style="height: 38px"></div>
                           </div>
                           <div class="row sub-title-3" style="height: 20px">
                             Bagage Collection Waiting Time
@@ -1206,7 +1215,7 @@
                         </div>
                         <div class="col-xs-4 item" style="padding: 12px">
                           <div class="row">
-                            <div class="qvplaceholder" id="QV-72" style="height: 35px"></div>
+                            <div class="qvplaceholder" id="QV-72" style="height: 38px"></div>
                           </div>
                           <div class="row sub-title-3" style="height: 20px">
                             Check-in Waiting Time
@@ -1214,7 +1223,7 @@
                         </div>
                         <div class="col-xs-4 item" style="padding: 12px">
                           <div class="row">
-                            <div class="qvplaceholder" id="QV-73" style="height: 35px"></div>
+                            <div class="qvplaceholder" id="QV-73" style="height: 38px"></div>
 
                           </div>
                           <div class="row sub-title-3" style="height: 20px">
@@ -1223,7 +1232,7 @@
                         </div>
                         <div class="col-xs-4 item" style="padding: 12px">
                           <div class="row">
-                            <div class="qvplaceholder" id="QV-74" style="height: 35px"></div>
+                            <div class="qvplaceholder" id="QV-74" style="height: 38px"></div>
                           </div>
                           <div class="row sub-title-3" style="height: 20px">
                             Outbound Flight Delay
@@ -1235,11 +1244,13 @@
                           <div class="legend-scale">
                             <ul class="legend-labels" style="display: flex;justify-content: space-between;align-items: center;">     
                               <li>
-                                <span style="background: #f8c143"></span>
+                                <div class="arrow-down"></div>
+                                <!--<span style="border-bottom: #f8c143"></span>-->
                                 <span class="LegendTitle" style="width: 140px !important;">Decrease versus previous period</span>
                               </li>
                               <li>
-                                <span style="background: #9fcd63"></span>
+                                <div class="arrow-up"></div>
+                                <!--<span style="border-bottom: #9fcd63"></span>-->
                                 <span class="LegendTitle" style="width: 140px !important;">Increase versus previous period</span>
                               </li>
                             </ul>
