visitor hubs update

--- a/tdc.html
+++ b/tdc.html
@@ -1415,12 +1415,17 @@
                     <div class="row" style="height: 25px; padding: 0px 16px">
                       <div class="col-xs-12 title">Site Satisfaction</div>
                     </div>
-                    <div class="row" style="height: 75px; padding: 0px 16px">
+                    <div class="row" style="height: 55px; padding: 0px 16px">
                       <div class="col-xs-6" style="height: 100%; padding: 0px">
                         <div id="QV-92" class="qvplaceholder" style="width: 100%; height: 100%"></div>
                       </div>
                       <div class="col-xs-6" style="height: 100%; padding-top: 10px">
                         <div id="QV-93" class="qvplaceholder" style="width: 100%; height: 100%"></div>
+                      </div>
+                    </div>
+                    <div class="row" style="display: flex; justify-content: flex-start; padding: 0px 12px;">
+                      <div class="col-xs-12 sub-title-4">
+                        Tourist Attraction Satisfaction
                       </div>
                     </div>
                   </div>
@@ -1430,12 +1435,17 @@
                     <div class="row" style="height: 25px; padding: 0px 16px">
                       <div class="col-xs-12 title">Site Activation</div>
                     </div>
-                    <div class="row" style="height: 75px; padding: 0px 16px">
+                    <div class="row" style="height: 55px; padding: 0px 16px">
                       <div class="col-xs-6" style="height: 100%; padding: 0px">
                         <div id="QV-94" class="qvplaceholder" style="width: 100%; height: 100%"></div>
                       </div>
                       <div class="col-xs-6" style="height: 100%; padding-top: 10px">
                         <div id="QV-95" class="qvplaceholder" style="width: 100%; height: 100%"></div>
+                      </div>
+                    </div>
+                    <div class="row" style="display: flex; justify-content: flex-start; padding: 0px 12px;">
+                      <div class="col-xs-12 sub-title-4">
+                        % of focus 2021 sites meeting basic standard
                       </div>
                     </div>
                   </div>
