--- a/tdc.html
+++ b/tdc.html
@@ -1470,7 +1470,7 @@
               <!--Graphs-->
               <div class="row" style="padding: 0px 16px">
                 <div class="col-xs-12" style="padding: 0px">
-                  <div class="item bg-dark" style="height: 520px">
+                  <div class="item bg-dark" style="height: 520px; display: flex;justify-content: space-between;">
                     <div class="col-xs-12 col-sm-6">
                       <div class="row" style="height: 40px; padding: 0px 16px">
                         <div class="col-xs-12 title">
@@ -1519,7 +1519,7 @@
                         </div>
                       </div>
                     </div>
-                    <div class="col-xs-12 col-sm-6">
+                    <div class="col-xs-12 col-sm-5">
                       <div class="row" style="height: 40px; padding: 10px;">
                         <div class="col-xs-12">
                           <div class="qvplaceholder" id="QV-99" style="height: 40px">placeholder for title</div>
