entering and leaving and visitor hubs update

--- a/tdc.html
+++ b/tdc.html
@@ -1025,12 +1025,17 @@
                     <div class="row" style="height: 25px; padding: 0px 16px">
                       <div class="col-xs-12 title">Entering Satisfaction</div>
                     </div>
-                    <div class="row" style="height: 75px; padding: 0px 16px">
+                    <div class="row" style="height: 55px; padding: 0px 16px">
                       <div class="col-xs-6" style="height: 100%; padding: 0px">
                         <div id="QV-59" class="qvplaceholder" style="width: 100%; height: 100%"></div>
                       </div>
                       <div class="col-xs-6" style="height: 100%; padding-top: 10px">
                         <div id="QV-60" class="qvplaceholder" style="width: 100%; height: 100%"></div>
+                      </div>
+                    </div>
+                    <div class="row" style="display: flex; justify-content: flex-start; padding: 0px 12px;">
+                      <div class="col-xs-12 sub-title-4">
+                        For International Visitors
                       </div>
                     </div>
                   </div>
@@ -1040,12 +1045,17 @@
                     <div class="row" style="height: 25px; padding: 0px 16px">
                       <div class="col-xs-12 title">Leaving Satisfaction</div>
                     </div>
-                    <div class="row" style="height: 75px; padding: 0px 16px">
+                    <div class="row" style="height: 55px; padding: 0px 16px">
                       <div class="col-xs-6" style="height: 100%; padding: 0px">
                         <div id="QV-61" class="qvplaceholder" style="width: 100%; height: 100%"></div>
                       </div>
                       <div class="col-xs-6" style="height: 100%; padding-top: 10px">
                         <div id="QV-62" class="qvplaceholder" style="width: 100%; height: 100%"></div>
+                      </div>
+                    </div>
+                    <div class="row" style="display: flex; justify-content: flex-start; padding: 0px 12px;">
+                      <div class="col-xs-12 sub-title-4">
+                        For International Visitors
                       </div>
                     </div>
                   </div>
@@ -1070,8 +1080,8 @@
               <!--Graphs-->
               <div class="row" style="padding: 0px 16px">
                 <div class="col-xs-12" style="padding: 0px">
-                  <div class="item bg-dark" style="height: 520px">
-                    <div class="col-xs-12 col-sm-8">
+                  <div class="item bg-dark" style="height: 520px;  display: flex;justify-content: space-between;">
+                    <div class="col-xs-12 col-sm-6">
                       <div class="row" style="height: 40px; padding: 0px 16px">
                         <div class="col-xs-12 title">
                           Understanding Customer Satisfaction
@@ -1146,15 +1156,15 @@
                                   <ul class="legend-labels">
                                     <li>
                                       <span style="background: #da8177"></span>
-                                      <span class="LegendTitle" style="width: 62px !important;">Low (&lt;2%)</span>
+                                      <span class="LegendTitle" style="width: 62px !important;">Low (0-60%)</span>
                                     </li>
                                     <li>
                                       <span style="background: #f8c143"></span>
-                                      <span class="LegendTitle" style="width: 62px !important;">Mid (-2-2%)</span>
+                                      <span class="LegendTitle" style="width: 62px !important;">Mid (60-80%)</span>
                                     </li>
                                     <li>
                                       <span style="background: #9fcd63"></span>
-                                      <span class="LegendTitle" style="width: 62px !important;">High (&gt;2%)</span>
+                                      <span class="LegendTitle" style="width: 62px !important;">High (&gt;80%)</span>
                                     </li>
                                     
                                   </ul>
@@ -1425,7 +1435,7 @@
                     </div>
                     <div class="row" style="display: flex; justify-content: flex-start; padding: 0px 12px;">
                       <div class="col-xs-12 sub-title-4">
-                        Tourist Attraction Satisfaction
+                        Satisfaction of All Visitors
                       </div>
                     </div>
                   </div>
@@ -1439,13 +1449,13 @@
                       <div class="col-xs-6" style="height: 100%; padding: 0px">
                         <div id="QV-94" class="qvplaceholder" style="width: 100%; height: 100%"></div>
                       </div>
-                      <div class="col-xs-6" style="height: 100%; padding-top: 10px">
-                        <div id="QV-95" class="qvplaceholder" style="width: 100%; height: 100%"></div>
+                      <div class="col-xs-6" style="height: 100%; padding:0px">
+                        <div id="QV-95" class="qvobject" style="width: 100%; height: 100%"></div>
                       </div>
                     </div>
                     <div class="row" style="display: flex; justify-content: flex-start; padding: 0px 12px;">
                       <div class="col-xs-12 sub-title-4">
-                        % of focus 2021 sites meeting basic standard
+                        Split of Priority Sites meeting basic experience standard
                       </div>
                     </div>
                   </div>
@@ -1460,7 +1470,7 @@
                         <div id="QV-96" class="qvplaceholder" style="height: 100%"></div>
                       </div>
                       <div class="col-xs-6" style="height: 100%; padding-top: 10px">
-                        <div id="QV-97" class="qvplaceholder" style="height: 100%"></div>
+                        <div id="QV-97" class="qvobject" style="height: 100%"></div>
                       </div>
                     </div>
                   </div>
