--- a/tdc.html
+++ b/tdc.html
@@ -977,15 +977,14 @@
                           </div>
                           <div id="relative" style="
                               height: 445px;
-                              position: relative;
-                              bottom: 36px !important;
                             ">
                              <div class="h-title">
                               <p>High Importance</p>
                             <div class="x-axis"></div>
                             </div>
-                            <div class="row" style="padding:0px 16px;">
-                              <div id="QV-40" class="qvplaceholder" style="height: 395px"></div>
+                            <div class="row" style="padding:0px 16px; position: relative;
+                            bottom: 36px !important;">
+                              <div id="QV-40" class="qvobject" style="height: 395px"></div>
                             </div>
                             <div class="row" style="height: 50px;padding: 0px 16px;display: flex;justify-content: center;align-items: center;">
                               <div class="my-legend" style="padding: 12px">
@@ -1169,7 +1168,7 @@
                     <div class="col-xs-12 col-sm-7">
                       <div class="row" style="height: 430px">
                         <div class="col-xs-12" style="height: 100%; padding: 0px">
-                          <div class="d-flex justify-content-end" style="
+                          <div class="d-flex justify-content-end margin-bottom" style="
                               height: 35px;
                               text-align: center;
                               display: flex;
@@ -1187,8 +1186,6 @@
                           </div>
                           <div id="overall" style="
                               height: 445px;
-                              position: relative;
-                              bottom: 20px !important;
                             ">
                             <div class="row" style="padding:0px 16px;">
                               <div id="QV-65" class="qvobject" style="height: 395px"></div>
@@ -1224,8 +1221,6 @@
                           </div>
                           <div id="segment" style="
                               height: 445px;
-                              position: relative;
-                              bottom: 20px !important;
                             ">
                             <div class="row" style="padding:0px 16px;">
                               <div id="QV-66" class="qvobject" style="height: 395px"></div>
@@ -1378,7 +1373,7 @@
                     </div>
                     <div class="row" style="display: flex; justify-content: flex-start; padding: 0px 12px;">
                       <div class="col-xs-12 sub-title-4">
-                        Satisfaction of All Visitors
+                        <div id="QV-80-a" class="qvplaceholder" style="width: 100%; height: 100%"></div>
                       </div>
                     </div>
                   </div>
@@ -1398,7 +1393,7 @@
                     </div>
                     <div class="row" style="display: flex; justify-content: flex-start; padding: 0px 12px;">
                       <div class="col-xs-12 sub-title-4">
-                        Satisfaction of All Visitors
+                        <div id="QV-82-a" class="qvplaceholder" style="width: 100%; height: 100%"></div>
                       </div>
                     </div>
                   </div>
@@ -1435,13 +1430,15 @@
                           <div style="
                               height: 445px;
                               position: relative;
-                              top: 15px !important;
+                            top: 15px !important;
                             ">
                             <div class="h-title mobility">
+                              <p class="rightAxisLabel">Low Importance</p>
                               <p>High Importance</p>
                             <div class="x-axis"></div>
                             </div>
-                            <div class="row" style="padding:0px 16px;">
+                            <div class="row" style="padding:0px 16px;position: relative;
+                            bottom: 35px !important;">
                               <div id="QV-85" class="qvobject" style="height: 395px"></div>
                             </div>
                             <div class="row" style="height: 50px;padding: 0px 16px;display: flex;justify-content: center;align-items: center;">
@@ -1520,7 +1517,7 @@
                     </div>
                     <div class="row" style="display: flex; justify-content: flex-start; padding: 0px 12px;">
                       <div class="col-xs-12 sub-title-4">
-                        Satisfaction of All Visitors
+                        <div id="QV-93-a" class="qvplaceholder" style="width: 100%; height: 100%"></div>
                       </div>
                     </div>
                   </div>
@@ -1540,7 +1537,7 @@
                     </div>
                     <div class="row" style="display: flex; justify-content: flex-start; padding: 0px 12px;">
                       <div class="col-xs-12 sub-title-4">
-                        Split of Priority Sites meeting basic experience standard
+                        <div id="QV-95-a" class="qvplaceholder" style="width: 100%; height: 100%"></div>
                       </div>
                     </div>
                   </div>
@@ -1565,13 +1562,15 @@
               <!--Graphs-->
               <div class="row" style="padding: 0px 16px">
                 <div class="col-xs-12" style="padding: 0px">
-                  <div class="item bg-dark" style="height: 520px; display: flex;justify-content: space-between;">
-                    <div class="col-xs-12 col-sm-6">
-                      <div class="row" style="height: 40px; padding: 0px 16px">
-                        <div class="col-xs-12 title">
-                          Understanding Site Performance
-                        </div>
+                  <div class="item bg-dark" style="height: 520px;">
+                    <div class="row" style="height: 40px; padding: 0px 16px">
+                      <div class="col-xs-12 title">
+                        Understanding Site Performance
                       </div>
+                    </div>
+                    <div class="row" style="display: flex;justify-content: space-between;">
+                    <div class="col-xs-12 col-sm-6">
+                   
                       <div class="row" style="height: 430px">
                         <div class="col-xs-12" style="height: 100%; padding: 0px">     
                           <div style="
@@ -1632,6 +1631,7 @@
                         </div>
                       </div>
                     </div>
+                  </div>
                   </div>
                 </div>
               </div>
@@ -1722,10 +1722,11 @@
                               top: 15px !important;
                             ">
                             <div class="h-title">
+                              <p class="rightAxisLabel">Low Importance</p>
                               <p>High Importance</p>
                             <div class="x-axis"></div>
                             </div>  
-                            <div class="row" style="padding:0px 16px;">
+                            <div class="row" style="padding:0px 16px; position: relative; bottom: 35px;">
                               <div id="QV-112" class="qvobject" style="height: 395px"></div>
                             </div>
                             <div class="row" style="height: 50px;padding: 0px 16px;display: flex;justify-content: center;align-items: center;">
@@ -1764,7 +1765,7 @@
                           Readiness by Site
                         </div>
                         <div class="col-xs-12 item" style="padding: 12px 12px 0px">
-                          <div class="qvplaceholder" id="QV-114" style="height: 190px"></div>
+                          <div class="qvplaceholder" id="QV-114" style="height: 250px"></div>
                         </div>
                       </div>
                     </div>
