--- a/tdc.html
+++ b/tdc.html
@@ -223,6 +223,8 @@
                   <div id="QV-4" class="qvplaceholder" style="width: 100%; height: 100%"></div>
                 </div>
               </div>
+               <div class="" style="float: right;text-align: end;color: white;margin-top: -30px;padding-right: 23px;font-style: italic;font-size: 13px;">
+                Refresh Date: 31 May, 2021</div>
               <div class="row">
                 <div class="col-xs-12 col-sm-4">
                   <qliksense-card content-height="600px">
@@ -659,6 +661,8 @@
                   <div id="QV-48" class="qvobject" style="width: 100%; height: 100%"></div>
                 </div>
               </div>
+              <div class="" style="float: right;text-align: end;color: white;margin-top: -30px;padding-right: 23px;font-style: italic;font-size: 13px;">
+                Refresh Date: 31 May, 2021</div>
               <div class="row">
                 <div class="col-xs-12 col-sm-4">
                   <div class="item bg-dark" style="height: 640px">
@@ -800,6 +804,8 @@
                   <div id="QV-30" class="qvplaceholder" style="width: 100%; height: 100%"></div>
                 </div>
               </div>
+              <div class="" style="float: right;text-align: end;color: white;margin-top: -30px;padding-right: 23px;font-style: italic;font-size: 13px;">
+                Refresh Date: 31 May, 2021</div>
               <!--KPIs copy-->
               <div class="row margin-bottom">
                 <div class="col-xs-12 col-md-3">
@@ -1106,6 +1112,8 @@
                   <div id="QV-58" class="qvplaceholder" style="width: 100%; height: 100%"></div>
                 </div>
               </div>
+              <div class="" style="float: right;text-align: end;color: white;margin-top: -30px;padding-right: 23px;font-style: italic;font-size: 13px;">
+                Refresh Date: 31 May, 2021</div>
               <!--KPIs copy-->
               <div class="row margin-bottom">
                 <div class="col-xs-12 col-md-4">
@@ -1372,6 +1380,8 @@
                   <div id="QV-78" class="qvplaceholder" style="width: 100%; height: 100%"></div>
                 </div>
               </div>
+              <div class="" style="float: right;text-align: end;color: white;margin-top: -30px;padding-right: 23px;font-style: italic;font-size: 13px;">
+                Refresh Date: 31 May, 2021</div>
               <!--KPIs copy-->
               <div class="row margin-bottom">
                 <div class="col-xs-12 col-md-4">
@@ -1523,6 +1533,8 @@
                   <div id="QV-91" class="qvplaceholder" style="width: 100%; height: 100%"></div>
                 </div>
               </div>
+              <div class="" style="float: right;text-align: end;color: white;margin-top: -30px;padding-right: 23px;font-style: italic;font-size: 13px;">
+                Refresh Date: 31 May, 2021</div>
               <!--KPIs copy-->
               <div class="row margin-bottom">
                 <div class="col-xs-12 col-md-4">
@@ -1676,6 +1688,8 @@
                   <div id="QV-105" class="qvplaceholder" style="width: 100%; height: 100%"></div>
                 </div>
               </div>
+              <div class="" style="float: right;text-align: end;color: white;margin-top: -30px;padding-right: 23px;font-style: italic;font-size: 13px;">
+                Refresh Date: 31 May, 2021</div>
               <!--KPIs copy-->
               <div class="row margin-bottom">
                 <div class="col-xs-12 col-md-4">
