--- a/tdc.html
+++ b/tdc.html
@@ -1045,6 +1045,7 @@
                               </button>
                               <button type="button" id="selectRelative" class="btn btn-secondary btn-round">
                                 PoP
+                                Relative
                               </button>
                             </div>
                           </div>
