--- a/tdc.html
+++ b/tdc.html
@@ -193,7 +193,7 @@
               <span id="btnAdvocacy" class="PaperTitleItem">Advocacy</span>
               <span id="btnEntering" class="PaperTitleItem">Entering &amp; Leaving</span>
               <span id="btnMobility" class="PaperTitleItem">Mobility</span>
-              <span id="btnVisitorHubs" class="PaperTitleItem">Visitor Hubs</span>
+              <span id="btnVisitorHubs" class="PaperTitleItem">Visitor Sites</span>
               <span id="btnSaudiHospitality" class="PaperTitleItem">Saudi Hospitality</span>
               <span id="logo2"></span>
             </div>
@@ -261,7 +261,7 @@
                 </div>
               </div>
                <div class="" style="float: right;text-align: end;color: white;margin-top: -30px;padding-right: 23px;font-style: italic;font-size: 13px;">
-                Refresh Date: 31 May, 2021</div>
+                Refresh Date: 3 July, 2021</div>
               <div class="row">
                 <div class="col-xs-12 col-sm-4">
                   <qliksense-card content-height="600px">
@@ -326,8 +326,7 @@
                                 <div class="qvplaceholder" id="QV-7"></div>
                               </div>
                               <div class="col-xs-12 sub-title-2" style="padding: 0px 26px">
-                                Split of Airports by Satisfaction Scores of
-                                International Visitors
+                                Split of Airports by Satisfaction Scores
                               </div>
                             </div>
                             <div class="row" style="height: 135px; padding: 3px 15px 0px 15px">
@@ -351,8 +350,7 @@
                                 <div class="qvplaceholder" id="QV-9"></div>
                               </div>
                               <div class="col-xs-12 sub-title-2" style="padding: 0px 26px">
-                                Split of Destinations by Local Taxi Satisfaction Scores of
-                                International Visitors
+                                Local Taxi Satisfaction Scores
                               </div>
                             </div>
                             <div class="row" style="height: 135px; padding: 3px 15px 0px 15px">
@@ -726,7 +724,7 @@
                 </div>
               </div>
               <div class="" style="float: right;text-align: end;color: white;margin-top: -30px;padding-right: 23px;font-style: italic;font-size: 13px;">
-                Refresh Date: 31 May, 2021</div>
+                Refresh Date: 3 July, 2021</div>
               <div class="row">
                 <div class="col-xs-12 col-sm-4">
                   <div class="item bg-dark" style="height: 640px">
@@ -905,7 +903,7 @@
                 </div>
               </div>
               <div class="" style="float: right;text-align: end;color: white;margin-top: -30px;padding-right: 23px;font-style: italic;font-size: 13px;">
-                Refresh Date: 31 May, 2021</div>
+                Refresh Date: 3 July, 2021</div>
               <!--KPIs copy-->
               <div class="row margin-bottom">
                 <div class="col-xs-12 col-md-3">
@@ -1250,7 +1248,7 @@
                 </div>
               </div>
               <div class="" style="float: right;text-align: end;color: white;margin-top: -30px;padding-right: 23px;font-style: italic;font-size: 13px;">
-                Refresh Date: 31 May, 2021</div>
+                Refresh Date: 3 July, 2021</div>
               <!--KPIs copy-->
               <div class="row margin-bottom">
                 <div class="col-xs-12 col-md-4">
@@ -1554,7 +1552,7 @@
                 </div>
               </div>
               <div class="" style="float: right;text-align: end;color: white;margin-top: -30px;padding-right: 23px;font-style: italic;font-size: 13px;">
-                Refresh Date: 31 May, 2021</div>
+                Refresh Date: 3 July, 2021</div>
               <!--KPIs copy-->
               <div class="row margin-bottom">
                 <div class="col-xs-12 col-md-4">
@@ -1743,7 +1741,7 @@
                 </div>
               </div>
               <div class="" style="float: right;text-align: end;color: white;margin-top: -30px;padding-right: 23px;font-style: italic;font-size: 13px;">
-                Refresh Date: 31 May, 2021</div>
+                Refresh Date: 3 July, 2021</div>
               <!--KPIs copy-->
               <div class="row margin-bottom">
                 <div class="col-xs-12 col-md-4">
@@ -1839,15 +1837,15 @@
                                 <ul class="legend-labels-circle">
                                   <li>
                                     <span style="background: #da8177"></span>
-                                    <span class="LegendTitle" style="width: 100px !important;">Low (0 - 60%)</span>
+                                    <span class="LegendTitle" style="width: 100px !important;">CSAT &lt;60 &amp; Exp Std &lt;75</span>
                                   </li>
                                   <li>
                                     <span style="background: #f8c143"></span>
-                                    <span class="LegendTitle" style="width: 100px !important;">Mid (60-80%)</span>
+                                    <span class="LegendTitle" style="width: 100px !important;">CSAT &gt;60 &amp; Exp Std &lt;75</span>
                                   </li>
                                   <li>
                                     <span style="background: #9fcd63"></span>
-                                    <span class="LegendTitle" style="width: 100px !important;">High (&gt;80%)</span>
+                                    <span class="LegendTitle" style="width: 100px !important;">CSAT &gt;60 &amp; Exp Std &gt;75</span>
                                   </li>
                                  <!--- <li>
                                     <span style="background: #FFFFFF"></span>
@@ -1934,7 +1932,7 @@
                 </div>
               </div>
               <div class="" style="float: right;text-align: end;color: white;margin-top: -30px;padding-right: 23px;font-style: italic;font-size: 13px;">
-                Refresh Date: 31 May, 2021</div>
+                Refresh Date: 3 July, 2021</div>
               <!--KPIs copy-->
               <div class="row margin-bottom">
                 <div class="col-xs-12 col-md-4">
