--- a/tdc.html
+++ b/tdc.html
@@ -190,10 +190,10 @@
               <span style="height: 65px; width: 100px"></span>
               <span id="btnOverview" class="PaperTitleItem PaperTitleSelectedItem">Overview</span>
               <span id="btnInitiatives" class="PaperTitleItem">Initiatives</span>
-              <span id="btnAdvocacy" class="PaperTitleItem">Advocacy</span>
+              <span id="btnAdvocacy" class="PaperTitleItem">Satisfaction</span>
               <span id="btnEntering" class="PaperTitleItem">Entering &amp; Leaving</span>
               <span id="btnMobility" class="PaperTitleItem">Mobility</span>
-              <span id="btnVisitorHubs" class="PaperTitleItem">Visitor Sites</span>
+              <span id="btnVisitorHubs" class="PaperTitleItem">Tourist Attractions</span>
               <span id="btnSaudiHospitality" class="PaperTitleItem">Saudi Hospitality</span>
               <span id="logo2"></span>
             </div>
